src/assets/scss/_common.scss
/*===================================================
=            Coomon Stlyes for the site            =
=====================================================*/

/* Font Styles Files Uplodding */

@include font("Able-Regular", "../fonts/abel/Abel-Regular");
@include font("Segoe-UI", "../fonts/segoe-ui/Segoe-UI"); 
@include font("Segoe-UI-Bold", "../fonts/segoe-ui/Segoe-UI-Bold");

/* Common Styles Start from Here */
*,
*::before,
*::after {
  box-sizing: border-box;
}
body {
  @include margin(0, 0, 0, 0);
  font-family: "Able-Regular", sans-serif;
  background: $color-black;
  color: $color-white;
}
body a {
  text-decoration: none !important;
}

button {
  outline: none;
  &:focus {
    outline: none !important;
  }
}

.img-responsive {
  max-width: 100%;
  height: auto;
}

.Able-Regular {
  font-family: "Able-Regular", sans-serif !important;
}
.Segoe-UI-Bold {
  font-family: "Segoe-UI-Bold", sans-serif !important;
}
.Segoe-UI {
  font-family: "Segoe-UI", sans-serif !important;
}

.input-group {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 10px;
  &.step1 {
    background: rgb(0 0 0 / 80%);
    padding: 0 10px 0 50px;
    border-radius: 50px;
    width: fit-content;
    margin: 0 auto;
    @media screen and (max-width:768px) {
      flex-direction: column;
      padding: 20px 10px 20px 20px;
      border-radius: 10px;
      width: 90%;
      .sction-btn {
        margin-left: auto;
      }
      .input-control {
        min-width: 280px;
      }
    }
  }
  &.otp {
    white-space: nowrap;
    background: rgb(0 0 0 / 80%);
    padding: 20px 10px 20px 50px;
    border-radius: 50px;
    @media screen and (max-width:768px) {
      flex-direction: column;
      align-items: flex-start;
      padding: 20px 10px 20px 20px;
      border-radius: 10px;
    }
    .otp-lable {
      font-size: 16px;
      margin: 0;
      color: #848484;
    }
    .input-group-flex {
      display: flex;
      align-items: center;
      justify-content: space-between;
      gap: 10px;
    }
  }
  .input-control {
    // min-width: 85%;
    // @media screen and (max-width:768px) { 
    //   min-width: 85%;
    // }
  }
}

p.input-box-text {
  margin-top: 13px;
  color: #575757;
  font-size: 16px;
  @extend .Able-Regular;
}

.form-otp {
  display: flex;
  align-items: center;
  justify-content: center;
}

.sction-btn {
  border: 0;
  background: transparent;
  // @extend.input-group;
}

.input-control {
  font-size: 20px;
  letter-spacing: 4px;
  @media screen and (max-width:768px) {
    font-size: 20px;
    letter-spacing: 1px;
  }
  .mat-form-field-label-wrapper {
    margin-top: 5px;
  }
  .mat-form-field-infix {
    border: 0;
  }
  .mat-form-field-label {
    // font-size: 25px;
    color: #efbe09;
    padding-bottom: 5px;
    letter-spacing: 1px;
    @extend .Able-Regular;
  }
  &.mat-form-field-appearance-standard .mat-form-field-underline,
  &.mat-form-field.mat-focused .mat-form-field-ripple.Able-Regular,
  .mat-form-field-ripple {
    height: 2px;
    background-color:#efbe09 !important;
  }
  .mat-input-element {
    caret-color: #efbe09;
    // font-size: 18px;
    @extend .Able-Regular;
  }
  &.mat-form-field.mat-focused .mat-form-field-label {
    // font-size: 16px;
    color: #efbe09;
  }
  font-weight: 400;
  min-width: 240px;
  &.otp {
    .mat-form-field-label {
      letter-spacing: 5px;
    }
  }
}

ng-otp-input {
  .otp-input {
    font-size: 24px !important;
    background: transparent !important;
    border: 0 !important;
    border-bottom: 2px solid #efbe09 !important;
    border-radius: 0 !important;
    color: #fff !important;
    @extend .Able-Regular;
    width: 70px !important;
    &:focus {
      outline: none;
    }
    @media screen and (max-width: 768px) {
      font-size: 20px !important;
    }
    @media screen and (max-width: 420px) {
      width: 40px !important;
    }
  }
}

.sction-btn {
  margin-left: 0px;
  margin-top: 0px;
  padding: 0 10px 0 0;
  cursor: pointer;
  .img-responsive {
    width: 50px;
    height:50px;
  }
}

.get-notified-block {
  margin-top: 50px;
  .title {
    font-size: 30px;
    text-transform: uppercase;
    line-height: 1;
    font-weight: 400;
    color: #c3c3c3;
  }
}

.footer-wrapper {
  display: flex;
  align-items: flex-end;
  justify-content: space-between;
  flex-wrap: wrap;
  // position: fixed;
  // bottom: 0px;
  // margin-top: 10%;
  margin-top: 12px;
  @extend .Able-Regular;
  // width: 100%;
  padding: 0 50px 20px;
  .social-wrapper {
    .title {
      color: #5d5d5d;
      font-size: 16px;
    }
    .social-icons {
      list-style: none;
      padding: 0;
      margin: 0;
      .social-link-item {
        display: inline-block;
        &:not(:first-child) {
          margin-left: 15px;
        }
        .social-link {
          img{
            width: 30px;
            height: 30px;
          }
        }
      }
    }
  }

  .img-responsive {
    max-width: 100%;
  }
  .acinimas-compatible-wrapper {
    text-align: center;
    .title {
      font-size: 20px;
      line-height: 1;
      padding-bottom: 10px;
      font-weight: 400;
      color: #ecbe08;
    }
    .acinimas-compatible-block {
      display: flex;
      align-items: flex-end;
      justify-content: space-between;
      .comp-block {
        // &:first-child {
          padding-right: 30px;
          position: relative;
          max-width: 500px;
          display: block;
            @media screen and (max-width: 768px) {
              display: none;
            }
          img {
            max-width: 100%;
          }
          &.mobile {
            display: none;
            @media screen and (max-width: 768px) {
              display: block;
              margin-left: 20px;
            }
          }

          // &:after {
          //   content: "";
          //   position: absolute;
          //   width: 3px;
          //   height: 25px;
          //   right: 15px;
          //   transform: translateY(-50%);
          //   top: 50%;
          //   background-color: #fff;
          // }
        // }
      }
    }
  }
}

.float-mat-menu {
  position: fixed;
  top: 30px;
  right: 30px;
  .mat-button-base {
    .mat-icon {
      font-size: 40px;
      color: #ecbe08;
    }
  }
  .mat-menu-item {
    color: #fff;
    span {
      @extend .Able-Regular;
      font-size: 20px;
    }
  }
}
body {
  .mat-menu-panel {
    min-width: 170px;
    background-color: transparent;
    margin-right: 10px;
    box-shadow: none;
  }
  .mat-menu-content {
    padding: 15px 0 15px !important;
    background: #d2d2d1;
    margin-top: 30px;
    position: relative;
    top: -15px;
  }
  .mat-menu-item {
    @extend .Able-Regular;
    color: #000;
    font-size: 16px;
    line-height: 35px;
    height: 35px;
    padding: 0 35px;
    background: #d2d2d1;
    &:hover {
      background-color: #fff !important;
      border-radius: 0px;
    }
  }
}

@media screen and (max-width:768px) {
  .footer-wrapper {
    padding: 15px 0px;
    position: relative;
    .social-wrapper {
      text-align: center;
      order: 2;
      margin: 15px auto 15px;
      .social-icons {
        justify-content: center;
      }

    }
    .acinimas-compatible-wrapper {
      .acinimas-compatible-block {
        display: block;
        .comp-block {
          &:first-child {
            padding: 0 0 5px;
            &::after {
              display: none;
            }
          }
        }
      }
    }
    .copy-right {
      bottom: 0;
      text-align: center;
      width: 100%;
      padding: 10px 0 0;
      order: 3;
    }
  }
}

.mat-dialog-container {
  margin: 40px 0;
  .model-header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    border-bottom: 1px solid #ccc;
    @extend.Able-Regular;
    h5 {
      font-size: 24px;
      @extend.Able-Regular;
      text-transform: capitalize;
      margin-bottom: 15px;
    }
    .material-icons {
      margin-bottom: 15px;
    }
  }
  .model-body {
    margin: 20px 0;
    max-height: 70vh;
    overflow-y: auto; 
  }
}

input:-webkit-autofill,
input:-webkit-autofill:hover, 
input:-webkit-autofill:focus,
textarea:-webkit-autofill,
textarea:-webkit-autofill:hover,
textarea:-webkit-autofill:focus,
select:-webkit-autofill,
select:-webkit-autofill:hover,
select:-webkit-autofill:focus {
  border: 1px solid transparent;
  -webkit-text-fill-color: #fff;
  -webkit-box-shadow: 0 0 0px 1000px transparent inset;
  transition: background-color 5000s ease-in-out 0s;
}

.mat-close-btn {
  display: flex;
  align-items: center;
  justify-content: end;
  button {
    color: #ff0000;
    background: transparent;
    border: 0;
    font-size: 16px;
    margin-right: 15px;
    cursor: pointer;
  }
}

.submenu { 
  position: relative;
}
.submenu:after{ 
  position: absolute;
  content: ''; 
  width: 0; 
  height: 0; 
  border-left: 15px solid transparent; 
  border-right: 15px solid transparent; 
  border-bottom: 15px solid #d2d2d1;
  right: 10px; 
  top: 1%; 
}

.main-block {
  display: flex;
  flex-direction: column;
  height: calc(100vh - 242px);
  justify-content: space-between;
  padding-top: 30px;
}

